Bug 389931 - "Filter by Group" not working in Tellico 3.1.1
Summary: "Filter by Group" not working in Tellico 3.1.1
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-05 22:11 UTC by lester
Modified: 2018-02-06 22:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lester 2018-02-05 22:11:16 UTC
I don't know if this is related to Bug 38601, but "Filter by Group" is not working for me now in 3.1.1 on Gentoo linux. 

Don't know what kind of additional information I could give, it's simply that clicking "Filter by Group" doesn't do anything...
Comment 1 Robby Stephenson 2018-02-06 02:49:34 UTC
Git commit a41bc841329346b2774d63a06bd0a594b3aa14f4 by Robby Stephenson.
Committed on 06/02/2018 at 02:45.
Pushed by rstephenson into branch '3.1'.

Fix a selection loop that ended up breaking "Filter by Group"

When a group was selected in the GroupView, the entry selection would
trigger with an empty selection. The EntryEditDialog would ultimately call
slotHandleNew() which would clear all the selection, which would then
deselect the group which had been selected in the first place.

To fix it, in the EntryEditDialog, only clear the selection if the
signals are not blocked, which is the case in setContents() with
an empty selection.
FIXED-IN: 3.1.2

M  +4    -0    ChangeLog
M  +7    -1    src/controller.cpp
M  +3    -1    src/entryeditdialog.cpp
M  +2    -0    src/filterview.cpp
M  +0    -1    src/filterview.h

https://commits.kde.org/tellico/a41bc841329346b2774d63a06bd0a594b3aa14f4
Comment 2 lester 2018-02-06 22:09:55 UTC
great, thank you!
looking forward to the release of 3.1.2.