src/filterview.cpp
@@ -141,6 +141,8 @@ void FilterView::contextMenuEvent(QContextMenuEvent* event_) {
 
 void FilterView::selectionChanged(const QItemSelection& selected_, const QItemSelection& deselected_) {
 //  DEBUG_BLOCK;
+  // in Controller::slotUpdateFilter(), filterView->clearSelection() gets called when the filter is empty
+  // which happens when only entries are selected here
   GUI::TreeView::selectionChanged(selected_, deselected_);
   FilterPtr filter;
   foreach(const QModelIndex& index, selectionModel()->selectedIndexes()) {
